--- a/CenaPlus.Client/Local/Result.xaml
+++ b/CenaPlus.Client/Local/Result.xaml
@@ -5,10 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="500" d:DesignWidth="700">
     <Grid Style="{StaticResource ContentRoot}">
-        <ListBox x:Name="ResultListBox">
-            
+        <ListBox x:Name="ResultListBox" Width="280" HorizontalAlignment="Left" SelectionChanged="ResultListBox_SelectionChanged">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock FontSize="16" Margin="5,0,0,0" Text="{Binding Status}" Foreground="{Binding StatusColor}"></TextBlock>
+                        <TextBlock Margin="5,0,0,0" Text="{Binding Details}"></TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
         </ListBox>
+        <TextBox Visibility="Collapsed" Margin="300,0,0,0" x:Name="txtDetail" AcceptsReturn="True" IsReadOnly="True" HorizontalScrollBarVisibility="Auto"></TextBox>
     </Grid>
 </UserControl>
