--- a/CenaPlus.Client/Remote/Home.xaml
+++ b/CenaPlus.Client/Remote/Home.xaml
@@ -17,18 +17,16 @@
             <StackPanel>
                 <TextBlock Text="Profile" Style="{StaticResource Heading2}" />
                 <Image Height="100" Width="100" HorizontalAlignment="Left" Source="/CenaPlus.Client;component/Resources/DefaultAvatar.jpg"/>
-                <TextBlock Text="Gasai Yuno" Width="100" HorizontalAlignment="Left" TextAlignment="Center"></TextBlock>
-                <TextBlock Text="User ID: 1" Margin="0,10,0,0"></TextBlock>
-                <TextBlock Text="User Group: Root"></TextBlock>
-                <TextBlock Text="Email: 1#4321.io"></TextBlock>
-                <TextBlock Text="Rating: 1500"></TextBlock>
-                <TextBlock Text="Nation: China"></TextBlock>
+                <TextBlock Name="txtNickName" Text="Gasai Yuno" Width="100" HorizontalAlignment="Left" TextAlignment="Center"></TextBlock>
+                <TextBlock Name="txtName" Text="" Margin="0,10,0,0"></TextBlock>
+                <TextBlock Name="txtID" Text=""></TextBlock>
+                <TextBlock Name="txtRole" Text=""></TextBlock>
             </StackPanel>
         </ScrollViewer>
         <GridSplitter Grid.Column="1" />
         <Grid Grid.Column="2" Margin="{StaticResource SplitRight}">
             <TextBlock Text="Server circulars" Style="{StaticResource Heading2}" />
-            <RichTextBox Margin="0,30,0,0" IsReadOnly="True"></RichTextBox>
+            <RichTextBox Name="txtCircular" Margin="0,30,0,0" IsReadOnly="True"></RichTextBox>
         </Grid>
     </Grid>
 </UserControl>
