--- a/CenaPlus.Client/Settings/Settings.xaml
+++ b/CenaPlus.Client/Settings/Settings.xaml
@@ -7,9 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <mui:ModernTab Layout="List" SelectedSource="/Settings/Compiler.xaml">
+        <mui:ModernTab Layout="List" SelectedSource="/Settings/SettingsAppearance.xaml">
             <mui:ModernTab.Links>
-                <mui:Link DisplayName="Compiler" Source="/Settings/Compiler.xaml" />
                 <mui:Link DisplayName="appearance" Source="/Settings/SettingsAppearance.xaml" />
                 <mui:Link DisplayName="about" Source="/Settings/About.xaml" />
             </mui:ModernTab.Links>
