--- a/CenaPlus.Server/ServerMode/Contest/ProblemList.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/ProblemList.xaml
@@ -10,7 +10,7 @@
         <ListView Margin="0,0,0,30" x:Name="ProblemListView" SelectedValuePath="ID" MouseDoubleClick="ProblemListView_MouseDoubleClick">
             <ListView.View>
                 <GridView x:Name="StatisticsGridView">
-                    <GridViewColumn Header="#" DisplayMemberBinding="{Binding ID}" Width="30"/>
+                    <GridViewColumn Header="#" DisplayMemberBinding="{Binding Index}" Width="30"/>
                     <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="240"/>
                     <GridViewColumn Header="Test cases" DisplayMemberBinding="{Binding TestCasesCount}" Width="70"/>
                     <GridViewColumn Header="Pts" DisplayMemberBinding="{Binding Score}" Width="70"/>
