--- a/CenaPlus.Server/ServerMode/Contest/Problem/TestCases.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Problem/TestCases.xaml
@@ -44,12 +44,8 @@
                     <Button Name="btnSave" Content="Save changes" Click="btnSave_Click"></Button>
                 </StackPanel>
                 <StackPanel x:Name="BatchPanel" Visibility="Collapsed">
-                    <TextBlock Text="Floder directory" Margin="0,0,0,5"></TextBlock>
-                    <WrapPanel Margin="0,0,0,20">
-                        <TextBox Width="200" Margin="0,0,10,0"></TextBox>
-                        <Button Content="..." x:Name="FloderDialog"></Button>
-                    </WrapPanel>
-                    <Button x:Name="btnBatchInsert" Content="BatchInsert"></Button>
+                    <Image x:Name="imgDataDirectory" AllowDrop="True" Width="256" Height="256" Source="/CenaPlus.Server;component/Resources/Box.png" Margin="0,0,0,20" DragEnter="imgDataDirectory_DragEnter" DragLeave="imgDataDirectory_DragLeave" Drop="imgDataDirectory_Drop"/>
+                    <TextBlock TextWrapping="Wrap" Text="Put the data files into above box, make the extension to .in and .ans/.out." HorizontalAlignment="Center"></TextBlock>
                 </StackPanel>
             </Grid>
         </ScrollViewer>
