--- a/CenaPlus.Server/Settings/Judge.xaml
+++ b/CenaPlus.Server/Settings/Judge.xaml
@@ -9,6 +9,7 @@
     <Grid Style="{StaticResource ContentRoot}">
         <ScrollViewer>
             <StackPanel x:Name="spJudgeNode">
+                <CheckBox x:Name="chkJudgeEnabled" IsChecked="True" Content="Enable provide judge service" Margin="0,0,0,20"></CheckBox>
                 <TextBlock Text="You need a low power windows-account to run the program that uploaded by competitors." TextWrapping="Wrap" Margin="0,0,0,5"></TextBlock>
                 <TextBlock Text="Username" TextWrapping="Wrap" Margin="0,0,0,5"></TextBlock>
                 <TextBox x:Name="txtWinUser" Margin="0,0,0,10"></TextBox>
@@ -16,9 +17,7 @@
                 <TextBox x:Name="txtWinPwd" Margin="0,0,0,20"></TextBox>
                 <TextBlock Text="You should create a floder to provide cena+ put some temporary files, and make sure the floder authority supports everyone to write." TextWrapping="Wrap" Margin="0,0,0,10"></TextBlock>
                 <TextBox x:Name="txtPath" Margin="0,0,0,20"></TextBox>
-                <TextBlock Text="When the center server contact your node server, you should provide a token." TextWrapping="Wrap" Margin="0,0,0,10"></TextBlock>
-                <TextBox x:Name="AccessTokenTextBox" Margin="0,0,0,20"></TextBox>
-                <Button Content="Save changes"></Button>
+                <Button x:Name="btnSave" Content="Save changes" Click="btnSave_Click"></Button>
             </StackPanel>
         </ScrollViewer>
     </Grid>
