--- a/CenaPlus.Client/Remote/Contest/Problems.xaml
+++ b/CenaPlus.Client/Remote/Contest/Problems.xaml
@@ -6,7 +6,7 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Style="{StaticResource ContentRoot}">
+    <Grid>
         <!-- TODO: set @SelectedSource -->
         <mui:ModernTab x:Name="ProblemTab" Layout="Tab">
         </mui:ModernTab>
