--- a/CenaPlus.Client/Remote/Contest/Standings.xaml
+++ b/CenaPlus.Client/Remote/Contest/Standings.xaml
@@ -6,13 +6,19 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="700">
+    <UserControl.Resources>
+        <Style x:Key="dgCell" TargetType="TextBlock">
+            <Setter Property="TextAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <DataGrid x:Name="dgStandings" IsReadOnly="True" AutoGenerateColumns="False" GridLinesVisibility="None" SelectionUnit="Cell" EnableRowVirtualization="False" Focusable="False" HeadersVisibility="Column">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="#" Binding="{Binding Rank}" Width="30" />
-                <DataGridTextColumn Header="Who" Width="80" Binding="{Binding Competitor}"/>
-                <DataGridTextColumn Header="Score" Width="80" Binding="{Binding MainKey}"/>
-                <DataGridTextColumn Header="Penalty" Width="80" Binding="{Binding SecKey}"/>
+                <DataGridTextColumn x:Name="dgtcRank" Binding="{Binding Rank}" Width="50" Header="#" />
+                <DataGridTextColumn x:Name="dgtcWho" Header="Who" Width="80" Binding="{Binding Competitor}" />
+                <DataGridTextColumn x:Name="dgtcMainKey" Header="Score" Width="80" Binding="{Binding MainKey}"/>
+                <DataGridTextColumn x:Name="dgtcSecKey" Header="Penalty" Width="80" Binding="{Binding SecKey}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
