--- a/CenaPlus.Client/Remote/Contest/Hack.xaml
+++ b/CenaPlus.Client/Remote/Contest/Hack.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="480" d:DesignWidth="800">
     <Grid>
         <ScrollViewer Margin="0,0,300,0">
-            <TextBox IsEnabled="False" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">#include &lt;iostream&gt;</TextBox>
+            <RichTextBox IsEnabled="False" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtsrc"></RichTextBox>
         </ScrollViewer>
         <Grid HorizontalAlignment="Right" Margin="0,0,0,0" Width="280">
             <WrapPanel Margin="0,0,0,0" Height="30" VerticalAlignment="Top">
