--- a/CenaPlus.Client/Remote/Contest/ResultPush.xaml
+++ b/CenaPlus.Client/Remote/Contest/ResultPush.xaml
@@ -6,17 +6,17 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Style="{StaticResource ContentRoot}">
+    <Grid>
         <ScrollViewer>
             <StackPanel MinWidth="200">
                 <TextBlock Text="Status id" Style="{StaticResource Heading2}" />
-                <TextBlock x:Name="tbStatusID" Text="" />
+                <TextBlock x:Name="tbStatusID" Text="" Margin="0,0,0,10" />
                 <TextBlock Text="Status" Style="{StaticResource Heading2}" />
-                <TextBlock x:Name="tbStatus" Text="" />
+                <TextBlock x:Name="tbStatus" Text="" FontWeight="Bold" Margin="0,0,0,10" />
                 <TextBlock Text="Time usage" Style="{StaticResource Heading2}" />
-                <TextBlock x:Name="tbTime" Text="" />
+                <TextBlock x:Name="tbTime" Text="" Margin="0,0,0,10" />
                 <TextBlock Text="Memory usage" Style="{StaticResource Heading2}" />
-                <TextBlock x:Name="tbMemory" Text="" />
+                <TextBlock x:Name="tbMemory" Text="" Margin="0,0,0,10" />
                 <TextBlock Text="Detail" Style="{StaticResource Heading2}" />
                 <TextBlock x:Name="tbDetail" Text="" />
                 
