--- a/CenaPlus.Server/Settings/About.xaml
+++ b/CenaPlus.Server/Settings/About.xaml
@@ -9,7 +9,7 @@
         <ScrollViewer>
             <StackPanel MinWidth="200">
                 <TextBlock Text="ABOUT" Style="{StaticResource Heading2}" />
-                <TextBlock Text="Developers: Gasai Yuno, Onetwogoo, Cuteli, Zaxs, Tangjz, Yaya" Margin="0,0,0,8" TextWrapping="Wrap" />
+                <TextBlock Text="Developers: Gasai Yuno, Ibe Kaoet, Cuteli, Zaxs, Tangjz, Yaya" Margin="0,0,0,8" TextWrapping="Wrap" />
                 <TextBlock Text="Version: 0.9.0 beta" Margin="0,0,0,8" TextWrapping="Wrap" />
             </StackPanel>
         </ScrollViewer>
