--- a/CenaPlus.Client/Remote/Contest/ProblemGeneral.xaml
+++ b/CenaPlus.Client/Remote/Contest/ProblemGeneral.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="700">
     <Grid Style="{StaticResource ContentRoot}">
-        <ListBox x:Name="ProblemListBox" MouseDoubleClick="ProblemListBox_MouseDoubleClick">
+        <ListBox x:Name="ProblemListBox" MouseDoubleClick="ProblemListBox_MouseDoubleClick" Margin="0,0,0,30" SelectionChanged="ProblemListBox_SelectionChanged">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -18,5 +18,8 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <WrapPanel VerticalAlignment="Bottom">
+            <Button Content="Lock" x:Name="btnLock" Click="btnLock_Click"></Button>
+        </WrapPanel>
     </Grid>
 </UserControl>
