--- a/CenaPlus.Server/ServerMode/Contest/HackList.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/HackList.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Client.Remote.Contest.HackList"
+﻿<UserControl x:Class="CenaPlus.Server.ServerMode.Contest.HackList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,7 +11,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel Height="35">
-                        <Image DockPanel.Dock="Left" Width="35" Height="35" Source="/CenaPlus.Client;component/Resources/DefaultAvatar.jpg"></Image>
+                        <Image DockPanel.Dock="Left" Width="35" Height="35" Source="/CenaPlus.Server;component/Resources/DefaultAvatar.jpg"></Image>
                         <StackPanel HorizontalAlignment="Left">
                             <TextBlock Margin="10,0,0,0" Text="{Binding Title}" FontSize="14" Foreground="{Binding Color}" />
                             <TextBlock Margin="10,0,0,0"  Text="{Binding Details}" FontSize="12" />
