--- a/CenaPlus.Server/ServerMode/Contest/Status.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Status.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="700">
     <Grid>
-        <ListView Margin="0,0,0,0" Width="400" x:Name="StatusListView" SelectedValuePath="ID" HorizontalAlignment="Left" SelectionChanged="StatusListView_SelectionChanged">
+        <ListView Margin="0,0,0,30" Width="400" x:Name="StatusListView" SelectedValuePath="ID" HorizontalAlignment="Left" SelectionChanged="StatusListView_SelectionChanged">
             <ListView.View>
                 <GridView x:Name="StatisticsGridView">
                     <GridViewColumn Header="#" DisplayMemberBinding="{Binding ID}" Width="30"/>
@@ -18,6 +18,10 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <WrapPanel VerticalAlignment="Bottom">
+            <Button x:Name="btnRejudgeAll" Content="Rejudge all" Margin="0,0,10,0" Click="btnRejudgeAll_Click"></Button>
+            <Button x:Name="btnRejudgeAllAC" Content="Rejudge all accepted" Margin="0,0,10,0" Click="btnRejudgeAllAC_Click"></Button>
+        </WrapPanel>
         <ScrollViewer Margin="420,0,0,0" x:Name="DetailsPanel" Visibility="Collapsed">
             <StackPanel>
                 <TextBlock Text="Competitor"></TextBlock>
